@@ -1,0 +1,9 @@
+[
+    ["Qué?", "", "", "Quién?", "Para quién?", "", "Dónde?", "Cuándo?"], 
+    ["Registro", "Sector/Cluster", "Subsector", "Organización", "Hombres", "Mujeres", "País", "Departamento/Provincia/Estado"], 
+    ["", "#sector+es", "#subsector+es", "#org+es", "#targeted+f", "#targeted+m", "#country", "#adm1", "#date+reported"], 
+    ["001", "WASH", "Higiene", "ACNUR", "100", "100", "Panamá", "Los Santos", "1 March 2015"], 
+    ["002", "Salud", "Vacunación", "OMS", "", "", "Colombia", "Cauca", ""], 
+    ["003", "Educación", "Formación de enseñadores", "UNICEF", "250", "300", "Colombia", "Chocó", ""], 
+    ["004", "WASH", "Urbano", "OMS", "80", "95", "Venezuela", "Amazonas", ""]
+]
